Ensure vertical gap on default gallery grid

--- a/src/assets/sass/modules/_responsive.scss
+++ b/src/assets/sass/modules/_responsive.scss
@@ -27,6 +27,10 @@
         gap: 0 2rem;
         grid-template-columns: repeat(12, 1fr);
 
+        &.gallery {
+            gap: 2rem;
+        }
+
         &.gap-0 {
             gap: 0;
         }
